# rav2d

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  funding.json  simd.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-23T06-24-25-349Z.yml  page-2026-05-23T06-24-53-335Z.yml  page-2026-05-23T06-30-18-072Z.yml  page-2026-05-23T06-31-28-293Z.yml  page-2026-05-23T06-31-39-205Z.yml  page-2026-05-23T11-21-32-393Z.yml
crates/rav2d/: Cargo.toml  README.md  build.rs
crates/rav2d-cli/: Cargo.toml  README.md
crates/rav2d-cli/src/: ivf.rs  main.rs  y4m.rs
crates/rav2d-sys/: Cargo.toml  README.md  build.rs
crates/rav2d-sys/src/: lib.rs
crates/rav2d/benches/: decode.rs
crates/rav2d/examples/: profile_decode.rs
crates/rav2d/fuzz/: Cargo.toml
crates/rav2d/fuzz/fuzz_targets/: decode.rs
crates/rav2d/src/: ccso.rs  cdef.rs  cdf.rs  cpu.rs  ctx.rs  data.rs  deblock.rs  decode.rs  decoder.rs  dip_tables.rs  dsp.rs  env.rs  error.rs  filmgrain.rs  gdf_tables.rs  getbits.rs  headers.rs  ibp.rs  internal.rs  intops.rs  intra_edge.rs  ipred.rs  ipred_neon.rs  ipred_prepare.rs  itx.rs  itx_1d.rs  levels.rs  lf_mask.rs  lib.rs  log.rs  looprestoration.rs  mc.rs  mc_neon.rs  mem.rs  msac.rs  obu.rs  pal.rs  picture.rs  pixel.rs  quantizer.rs  (+11 more)
crates/rav2d/tests/: conformance.rs  fuzz.rs
crates/rav2d/tests/data/: cov-420-128x128.obu  cov-monochrome-128x128.obu  cov-multitile-416x240.obu  hbd-10bit-128x128-8f.obu  hbd-10bit-128x128-filters.obu  hbd-10bit-128x128-grain.obu  hbd-10bit-128x128-intra.obu  multitile-10bit-128x128.obu  resize-10bit-superres.obu
crates/rav2d/tests/data/fuzz-regressions/: crash-1a12e7050ebdaa41f744741e8fa7d5728b7528b3  crash-34a757f6e66fdc1c020cc6d5c952ef37acb0b2d7  crash-579d21f846910983927a784cc47cf42c22971821  crash-5dfc8bf1b0ece74fa71ca4c0e0f3fa5858b6904d  crash-759a1645a5aa83b014ae97bb95e28b0bc132c96f  crash-83e1e187815f7e1f863022612f250e627fd61fe5  crash-960820fe06c8ae34f7ccdf9c6dc193191ef63e33  crash-b267e0d0abae10106cd4212d6b81001a232bcc7e  crash-db342095400d3beecfe6b191ae39884ae0bdba35  crash-db8bcc9d52dd5f57855b5f4f1ea2b6f5c8efbf97  oom-dbf84232002b465bc4109fdf2b7b1743999d235a
docs/: index.html
docs/architecture/: porting-strategy.md
docs/research/: existing-ports.md  funding-analysis.md  monetization-plan.md  project-assessment.md
