[workspace]
resolver = "2"
members = [
    "crates/rav2d",
    "crates/rav2d-sys",
    "crates/rav2d-cli",
]
exclude = [
    "crates/rav2d/fuzz",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/stukenov/rav2d"
description = "AV2 video decoder in Rust, based on dav2d"
rust-version = "1.85"

[workspace.dependencies]
rav2d = { path = "crates/rav2d", version = "0.3.0" }
rav2d-sys = { path = "crates/rav2d-sys", version = "0.3.0" }
