[package]
name = "rav2d-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for rav2d AV2 decoder"
readme = "README.md"
keywords = ["av2", "video", "decoder", "cli"]
categories = ["command-line-utilities", "multimedia::video"]

[[bin]]
name = "rav2d"
path = "src/main.rs"

[dependencies]
rav2d = { workspace = true }
clap = { version = "4", features = ["derive"] }
