[package]
name = "rav2d"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AV2 video decoder in Rust"
readme = "README.md"
keywords = ["av2", "video", "decoder", "codec"]
categories = ["multimedia::video"]

[dependencies]
rav2d-sys = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode"
harness = false
